--- a/member/src/main/resources/application.properties
+++ b/member/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.servlet.context-path=/member
 
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+management.endpoints.web.exposure.include=*
